--- a/.swcrc
+++ b/.swcrc
@@ -24,11 +24,11 @@
       "@config": ["config"],
       "@interfaces/*": ["interfaces/*"],
       "@routes/*": ["routes/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@middlewares/*": ["middlewares/*"]
       //"@controllers/*": ["controllers/*"],
       //"@dtos/*": ["dtos/*"],
       //"@exceptions/*": ["exceptions/*"],
-      //"@middlewares/*": ["middlewares/*"],
       //"@models/*": ["models/*"],
       //"@services/*": ["services/*"],
     }
